--- a/style.css
+++ b/style.css
@@ -81,6 +81,9 @@ header {
     /* 全面へ */
     z-index: 99;
     top: 0;
+    box-shadow: 0 2px 2px 0 #00000013,
+        0 1px 5px 0 #00000013,
+        0 3px 1px -2px #00000013;
 }
 
 /* 上に上がる動き */
@@ -190,6 +193,10 @@ header.DownMove {
 
 #header-ul li:hover {
     background-color: #98cc00d0;
+}
+
+.openBtn {
+    display: none;
 }
 
 /* =========ナビゲーションのためのCSS=============== */
@@ -317,15 +324,15 @@ header.DownMove {
     /* ========= ボタンのためのCSS =============== */
     /* ボタン外側*/
     .openBtn {
-        position: absolute;
+        display: block;
+        position: relative;
         /* ボタン内側の基点となるためrelativeを指定 */
         z-index: 9999;
-        background: #74cc00;
-        right: 4vw;
+        margin-left: auto;
+        margin-right: 4vw;
         cursor: pointer;
         width: 50px;
         height: 50px;
-        border-radius: 5px;
     }
 
     /* ボタン内側 */
@@ -334,12 +341,12 @@ header.DownMove {
         transition: all 0.6s;
         /* アニメーションの設定 */
         position: absolute;
-        left: 12.5px;
+        left: 14px;
         height: 2.5px;
         /* 角を丸くする */
         border-radius: 5px;
         background: #fff;
-        width: 50%;
+        width: 45%;
     }
 
     .openBtn span:nth-of-type(1) {
@@ -358,17 +365,12 @@ header.DownMove {
         content: "Menu";
         /* 3つ目の要素のafterにMenu表示を指定 */
         position: absolute;
-        top: 7px;
-        left: -3.5px;
+        top: 6px;
+        left: -2px;
         color: #fff;
-        font-size: 0.65rem;
+        font-size: 0.4rem;
         /* 大文字にする */
         text-transform: uppercase;
-    }
-
-    /* activeクラスが付与されているとき、ボタンを動かさない. */
-    .openBtn.active {
-        position: fixed;
     }
 
     /* activeクラスが付与されると線が回転して×になり、Menu⇒Closeに変更 */
@@ -426,7 +428,7 @@ header.DownMove {
 
 /* パンくずメニュー */
 
-.bread {
+#bread {
     margin-left: 3%;
 }
 
@@ -457,11 +459,12 @@ main {
     background-color: #f9f9f9;
     width: 90vw;
     max-width: 360px;
-    padding: 15px 0;
+    padding-top: 15px;
     margin: 0 auto;
     border-radius: 20px;
     border: solid 1px #999;
     margin-top: 20px;
+    padding-bottom: 20px;
 }
 
 #answer {
@@ -474,7 +477,7 @@ main {
     font-size: 2em;
     border-radius: 10px;
     margin: 0 auto;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 
@@ -486,14 +489,36 @@ main {
     margin-left: 2px;
 }
 
+#cursor.up {
+    position: relative;
+    bottom: calc(2rem * 0.6 - 7px);
+    height: calc(2rem * 0.6);
+    margin-left: 0;
+}
+
+#cursor.down {
+    position: relative;
+    top: calc(2rem * 0.6 - 9px);
+    height: calc(2rem * 0.6);
+    margin-left: 0;
+}
+
+#cursor.left {
+    position: relative;
+    right: 0.35em;
+    height: calc(2rem * 0.6);
+}
+
+/* ナビを隠す */
+
 #gray {
     position: absolute;
     width: 90px;
-    height: 370px;
+    height: 385px;
     background: #f9f9f9;
     bottom: -1px;
     left: -1px;
-    z-index: 3999;
+    z-index: 96;
     border-bottom-left-radius: 20px;
     border-left: solid 1px #999;
     border-bottom: solid 1px #999;
@@ -502,11 +527,11 @@ main {
 #white {
     position: absolute;
     width: calc((100vw - 360px) / 2);
-    height: 370px;
+    height: 385px;
     background: #fff;
     bottom: -1px;
     left: calc((100vw - 360px) / -2);
-    z-index: 3999;
+    z-index: 95;
 }
 
 /* 隠しているボタン,ナビ */
@@ -514,15 +539,18 @@ main {
 #set-nav {
     position: absolute;
     /*ナビのスタート位置と形状*/
-    left: -162px;
+    left: -172px;
     width: 250px;
     height: calc(420px - 1em - 45px);
-    margin-top: 8px;
+    margin-top: 13px;
     /*ナビの高さ*/
     background: #fff;
     /*動き*/
     transition: all 0.6s;
-    z-index: 999;
+    z-index: 80;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+        0 1px 10px 0 rgba(0, 0, 0, 0.12),
+        0 2px 4px -1px rgba(0, 0, 0, 0.4);
 }
 
 /*アクティブクラスがついたら位置を0に*/
@@ -530,23 +558,13 @@ main {
     left: 88px;
 }
 
-@media screen and (max-width: 400px) {
-    #set-nav {
-        left: calc((90vw - 280px) / 2 - 202px);
-    }
-
-    #set-nav.setPanelActive {
-        left: calc((90vw - 280px) / 2 + 48px);
-    }
-}
-
 /*ナビゲーションの縦スクロール*/
 #set-nav-list {
     /*ナビの数が増えた場合縦スクロール*/
     position: absolute;
-    z-index: 999;
-    width: 250px;
-    height: 100vh;
+    z-index: 80;
+    width: 100%;
+    height: 100%;
     padding: 15px 0;
     /*表示する高さ*/
     overflow: auto;
@@ -554,7 +572,7 @@ main {
 
 .function-list {
     /*ナビゲーション天地中央揃え*/
-    width: 250px;
+    width: 100%;
     text-align: center;
     position: absolute;
     left: 50%;
@@ -565,7 +583,7 @@ main {
     display: flex;
     width: 100%;
     justify-content: center;
-    padding-top: 15px;
+    padding-top: 20px;
 }
 
 #buttons div {
@@ -696,11 +714,18 @@ button.outline-button:active {
     background-color: #dae7b488;
 }
 
+.img-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .open-nav .outline-button {
     width: 40px;
     height: 40px;
     position: relative;
-    z-index: 9999;
+    z-index: 97;
+    margin-bottom: 7px
 }
 
 /* 分数のCSS */
@@ -732,19 +757,95 @@ button.outline-button:active {
     margin: 0 8px;
 }
 
-.topLittle {
+.button-fraction-integer {
     position: relative;
-    top: -9px;
+    top: -11px;
     margin-right: 2px;
-    font-size: 0.75em;
+    font-size: 0.8em;
 }
 
 .smallFont {
     font-size: 0.5em;
 }
 
+.smallFont-b {
+    font-size: 0.9em;
+}
+
+.fraction-integer {
+    position: relative;
+    font-size: 0.7em;
+    left: 5px;
+}
+
+@media screen and (max-width: 350px) {
+    .fraction {
+        font-size: 0.5em;
+    }
+
+    .button-fraction-integer {
+        font-size: 0.6em;
+        top: -7px;
+    }
+
+    button {
+        font-size: 0.9em;
+    }
+
+    .smallFont {
+        font-size: 0.4rem;
+    }
+
+    .smallFont-b {
+        font-size: 0.8rem;
+    }
+
+    .open-nav button img {
+        width: 70%;
+    }
+}
+
 .noRoboto {
     font-family: 'Noto Sans JP', sans-serif;
+}
+
+@media screen and (max-width: 400px) {
+    #set-nav {
+        left: calc((30vw - 40px) / 2 - 40vw - 42px);
+        width: calc(50vw + 36px);
+        height: calc(75vw + 60px);
+    }
+
+    #set-nav.setPanelActive {
+        left: calc((30vw - 40px) / 2 + 10vw + 5px);
+    }
+
+    button {
+        width: 12.5vw;
+        height: 12.5vw;
+    }
+
+    .open-nav .outline-button {
+        width: 10vw;
+        height: 10vw;
+    }
+
+    #gray {
+        width: calc((30vw + 46px) / 2);
+        height: calc(75vw + 87px);
+    }
+
+    #white {
+        width: calc((100vw - 90vw) / 2);
+        height: calc(75vw + 87px);
+        left: calc((100vw - 90vw) / -2);
+    }
+}
+
+@media screen and (max-width: 330px) {
+    #gray {
+        width: calc((30vw + 36px) / 2);
+    }
 }
 
 /* 見出し */
@@ -787,7 +888,7 @@ section h2 {
 }
 
 .mainPicture {
-    width: 90%;
+    height: 70vh;
     display: block;
     margin: 20px auto;
 }
@@ -832,63 +933,44 @@ iframe {
 
 /* ========= ページトップのためのCSS =============== */
 /* リンクの形状 */
-#page-top a {
-    display: block;
+#page-top {
+    display: flex;
     justify-content: center;
     align-items: center;
-    background: #3c90f0bb;
-    border-radius: 8px;
+    border-radius: 50%;
     width: 65px;
     height: 65px;
     color: #fff;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 0.7rem;
-    transition: all 0.3s;
-    position: relative;
-}
-
-.page-top-text {
-    position: relative;
-    top: 10px
-}
-
-#page-top a:hover {
-    background: #3044ff;
-}
-
-@media (hover: none) {
-    #page-top a:hover {
-        background: #3c8ff0;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    #page-top a {
-        width: 50px;
-        height: 50px;
-        font-size: 0.5rem;
-    }
-
-    .page-top-text {
-        position: relative;
-        top: 5px
-    }
-
-    #toTop {
-        top: -13px;
-    }
-}
-
-/* リンクを右下に固定 */
-#page-top {
+    cursor: pointer;
     position: fixed;
     right: 20px;
     z-index: 2;
     /* はじめは非表示 */
     opacity: 0;
     transform: translateY(100px);
+}
+
+#page-top a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    font-size: 0.7rem;
+}
+
+@media screen and (max-width: 700px) {
+    #page-top {
+        width: 55px;
+        height: 55px;
+    }
+
+    #page-top a {
+        font-size: 0.5rem;
+    }
+}
+
+#toTop {
+    position: relative;
+    bottom: 3px;
 }
 
 /* 上に上がる動き */
@@ -904,7 +986,7 @@ iframe {
     }
 
     to {
-        opacity: 1;
+        opacity: 0.8;
         transform: translateY(0);
     }
 }
@@ -917,12 +999,12 @@ iframe {
 
 @keyframes DownAnimeTop {
     from {
-        opacity: 1;
+        opacity: 0.8;
         transform: translateY(0);
     }
 
     to {
-        opacity: 1;
+        opacity: 0.8;
         transform: translateY(100px);
     }
 }
