--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ header.DownMove {
     /* ========= ボタンのためのCSS =============== */
     /* ボタン外側*/
     .openBtn {
-        display: block;
+        display: flex;
         position: relative;
         /* ボタン内側の基点となるためrelativeを指定 */
         z-index: 9999;
@@ -333,6 +333,8 @@ header.DownMove {
         cursor: pointer;
         width: 50px;
         height: 50px;
+        justify-content: center;
+        align-items: center;
     }
 
     /* ボタン内側 */
@@ -366,9 +368,9 @@ header.DownMove {
         /* 3つ目の要素のafterにMenu表示を指定 */
         position: absolute;
         top: 6px;
-        left: -2px;
+        left: -1.5px;
         color: #fff;
-        font-size: 0.4rem;
+        font-size: 0.4em;
         /* 大文字にする */
         text-transform: uppercase;
     }
@@ -396,8 +398,8 @@ header.DownMove {
         content: "Close";
         /* 3つ目の要素のafterにClose表示を指定 */
         transform: translateY(0) rotate(-45deg);
-        top: 8px;
-        left: 4.5px;
+        top: 8.5px;
+        left: 7px;
     }
 }
 
@@ -888,7 +890,8 @@ section h2 {
 }
 
 .mainPicture {
-    height: 70vh;
+    width: 90vw;
+    max-width: 360px;
     display: block;
     margin: 20px auto;
 }
